# Sawska-s-Task-manager

./: CMakeLists.txt  README.md  ServiceManager.cpp  StartupManager.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  processParser.cpp
headers/: ServiceManager.h  StartupManager.h  processParser.h
